<?xml version="1.0"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->

<package format="3">
  <name>gnsstk_ros</name>
  <version>1.0.0</version>
  <description>ROS bindings for GNSSTk library.</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cras_cpp_common</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gnss_info_msgs</depend>
  <depend>roscpp</depend>

  <build_depend>gnsstk</build_depend>
  <exec_depend>gnsstk</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>
</package>
